--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Home</title>
+</head>
+<body>
+
 <picture>
 <img src="Pictures/salonifylogo.png" style="width:auto;">
 </picture>
@@ -16,3 +23,6 @@
     
     Nunc consequat magna eros. Donec porta libero est, vel mattis nisl volutpat tincidunt. Curabitur ac leo interdum, euismod purus a, ullamcorper dui. Vestibulum egestas a est et mollis. Proin nisl sem, luctus at accumsan ut, lacinia eu diam. Curabitur scelerisque quam ante, eu placerat massa euismod in. Suspendisse eu luctus neque, et bibendum urna. Morbi a fringilla odio. Aliquam condimentum ultrices nisl, vel egestas nibh blandit at. In at tortor tincidunt quam luctus ornare et sed dolor. Donec scelerisque velit at pharetra ultricies. Cras vehicula fermentum sollicitudin. Vivamus a lorem quis purus pharetra commodo. Proin luctus venenatis massa at faucibus. Quisque elementum erat nec porttitor efficitur.
 </p>
+
+</body>
+</html>
