--- a/src/app/stylists/stylists.component.html
+++ b/src/app/stylists/stylists.component.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Stylists</title>
+</head>
+<body>
+
 <h1>Stylists</h1>
 <h2>SQL sync here</h2>
 
@@ -11,3 +18,6 @@
       </ul>
     </li>
   </ul>
+
+</body>
+</html>
