--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Posts</title>
+</head>
+<body>
+
 <h1>Posts</h1>
 
 <ul [@listStagger]="posts$">
@@ -7,3 +14,5 @@
     <p>{{ post.body }}</p>
   </li>
 </ul>
+</body>
+</html>
