--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,7 +18,7 @@ body {
            margin:0;padding:0;
        
            li {
-               background: #fff;
+               background: gr#fff;
                border-radius: 8px;
                padding: 20px;
                margin-bottom: 8px;
